<resources>
    <string name="app_name">BookingShutle</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="back_to_login">Back to Login</string>

    <string name="hint_error_user_name">Username yang anda masukkan tidak terdaftar</string>
    <string name="hint_error_password">Password yang anda masukkan salah</string>

</resources>
